syntax = "proto3";
package kagzi.v1;

import "common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ============================================
// SERVICE
// ============================================
service WorkflowService {
  rpc StartWorkflow(StartWorkflowRequest) returns (StartWorkflowResponse);
  rpc GetWorkflow(GetWorkflowRequest) returns (GetWorkflowResponse);
  rpc ListWorkflows(ListWorkflowsRequest) returns (ListWorkflowsResponse);
  rpc CancelWorkflow(CancelWorkflowRequest) returns (google.protobuf.Empty);
}

// ============================================
// ENUMS
// ============================================
enum WorkflowStatus {
  WORKFLOW_STATUS_UNSPECIFIED = 0;
  WORKFLOW_STATUS_PENDING = 1;
  WORKFLOW_STATUS_RUNNING = 2;
  WORKFLOW_STATUS_SLEEPING = 3;
  WORKFLOW_STATUS_COMPLETED = 4;
  WORKFLOW_STATUS_FAILED = 5;
  WORKFLOW_STATUS_CANCELLED = 6;
}

// ============================================
// MESSAGES
// ============================================
message Workflow {
  string run_id = 1;
  string external_id = 2; // User-provided, acts as idempotency key
  string namespace_id = 3;
  string task_queue = 4;
  string workflow_type = 5;
  WorkflowStatus status = 6;
  Payload input = 7;
  Payload output = 8;
  ErrorDetail error = 9;
  int32 attempts = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp started_at = 12;
  google.protobuf.Timestamp finished_at = 13;
  google.protobuf.Timestamp wake_up_at = 14;
  google.protobuf.Timestamp deadline_at = 15;
  string worker_id = 16;
  string version = 17;
  string parent_step_id = 18;
}

// --- Requests/Responses ---
message StartWorkflowRequest {
  string external_id = 1; // Acts as idempotency key
  string namespace_id = 2;
  string task_queue = 3;
  string workflow_type = 4;
  Payload input = 5;
  google.protobuf.Timestamp deadline_at = 6;
  string version = 7;
  RetryPolicy retry_policy = 8;
}

message StartWorkflowResponse {
  string run_id = 1;
  bool already_exists = 2;
}

message GetWorkflowRequest {
  string run_id = 1;
  string namespace_id = 2;
}

message GetWorkflowResponse {
  Workflow workflow = 1;
}

message ListWorkflowsRequest {
  string namespace_id = 1;
  optional WorkflowStatus status_filter = 2;
  PageRequest page = 3;
}

message ListWorkflowsResponse {
  repeated Workflow workflows = 1;
  PageInfo page = 2;
}

message CancelWorkflowRequest {
  string run_id = 1;
  string namespace_id = 2;
}
